[tool.poetry]
name = "docs"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.3"
mkdocs = "1.6.0"
mkdocs-material = { version = "9.5.22", extras = ["imaging"] }
mike = "2.1.1"
mkdocs-git-revision-date-localized-plugin = "1.2.5"
mkdocs-git-committers-plugin-2 = "2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
