[tool.poetry]
name = "docs"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.4"
mkdocs = "1.6.0"
mkdocs-material = { version = "9.5.28", extras = ["imaging"] }
mike = "2.1.3"
mkdocs-git-revision-date-localized-plugin = "1.2.6"
mkdocs-git-committers-plugin-2 = "2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
