[tool.poetry]
package-mode = false
requires-poetry = '>=2.0'

[tool.poetry.dependencies]
python = "3.14.2"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "docs"
requires-python = '3.14.2'
dependencies = [
    'mkdocs (==1.6.1)',
    'mkdocs-material[imaging] (==9.7.1)',
    'mike (==2.1.3)',
    'mkdocs-git-revision-date-localized-plugin (==1.5.0)',
    'mkdocs-git-committers-plugin-2 (==2.5.0)',
]
